Dark mode fixes for the tool buttons

--- a/htdocs/css/bootstrap-theme.css
+++ b/htdocs/css/bootstrap-theme.css
@@ -35,13 +35,11 @@
 }
 .btn-default {
   text-shadow: 0 1px 0 #fff;
-  background-image: -webkit-linear-gradient(top, #fff 0%, #e0e0e0 100%);
-  background-image:         linear-gradient(to bottom, #fff 0%, #e0e0e0 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe0e0e0', GradientType=0);
   filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
   background-repeat: repeat-x;
-  border-color: #dbdbdb;
-  border-color: #ccc;
+  border-color: #EEE;
+  border-color: #EEE;
 }
 .btn-default:hover,
 .btn-default:focus {
