--- a/htdocs/css/mpd.css
+++ b/htdocs/css/mpd.css
@@ -46,9 +46,6 @@ body {
 .btn.active {
   background-image: none;
   outline: 0;
-  -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-          box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  color: #428bca;
   background-color: #fdfdfd;
   border-color: #adadad;
 }
@@ -83,7 +80,7 @@ td:last-child, td:first-child {
   z-index: 9999;
 }
 
-/* Positioning */ 
+/* Positioning */
 .notifications.top-right {
   right: 10px;
   top: 60px;
